# MacEff

./: .env.example  .gitignore  AGENT_BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
macf/: README.md  pyproject.toml
macf/docs/developer/: future-knowledge-extensions.md
macf/docs/maintainer/: architecture.md  event-sourcing.md  hook-epistemology.md  hook-visibility-matrix.md  settings-epistemology.md  task-system-internals.md  tool-epistemology.md
macf/docs/user/: cli-reference.md  commands.md  configuration.md  environment.md  event-sourcing.md  hooks.md  hybrid-search.md  identifiers.md  statusline.md
macf/scripts/: check_silent_exceptions.py  pre-commit-hook.sh
macf/src/macf/: .macf_root_marker  __init__.py  _test_antipattern.py  agent_events_log.py  cli.py  config.py  event_queries.py  ideas.py  supervisor.py  utils.py
macf/src/macf/backup/: __init__.py  archive.py  integrity.py  manifest.py  paths.py  transplant.py
macf/src/macf/channels/: __init__.py  telegram.py
macf/src/macf/eventlog/: __init__.py  analyzer.py
macf/src/macf/forensics/: __init__.py  dev_drive.py  transcript_search.py
macf/src/macf/hooks/: handle_notification.py  handle_permission_request.py  handle_post_tool_use.py  handle_pre_compact.py  handle_pre_tool_use.py  handle_session_end.py  handle_session_start.py  handle_stop.py  handle_subagent_start.py  handle_subagent_stop.py  handle_user_prompt_submit.py  hook_logging.py  recoverable_errors.py  recovery.py  sidecar.py
macf/src/macf/hybrid_search/: __init__.py  base_indexer.py  lancedb_indexer.py  lancedb_search.py  models.py  policy_indexer.py  policy_search.py
macf/src/macf/mcp/: __init__.py  policy_search.py
macf/src/macf/models/: __init__.py  agent_spec.py  project_spec.py
macf/src/macf/modes/: __init__.py  detection.py
macf/src/macf/observability/: __init__.py  messages.py  tool_metadata.py  warnings.py
macf/src/macf/policy/: __init__.py  events.py  injection.py
macf/src/macf/proxy/: __init__.py  __main__.py  (+2 more)
macf/tests/: README.md  conftest.py  test_agent_identity.py  test_agent_spec.py  test_auto_mode_auth_token.py  test_backup.py  test_breadcrumb_cli.py  test_claude_settings.py  test_cli_helpers.py  test_commands.py  test_compaction.py  test_config.py  test_context_cli.py  test_custom_models.py  test_cycles.py  test_deleg_drv_correlation.py  test_delegation_tracking.py  test_env_cli.py  test_environment.py  test_event_first_reads.py  test_event_queries.py  test_eventlog_analyzer.py  test_events_cli.py  test_formatting.py  test_framework_install_verification.py  test_get_token_info.py  test_get_token_info_compaction_lower_bound.py  test_get_token_info_preserved_segment.py  test_handle_notification.py  test_handle_permission_request.py  test_handle_post_tool_use.py  test_handle_pre_compact.py  test_handle_pre_tool_use.py  test_handle_session_end.py  test_handle_session_start.py  test_handle_stop.py  test_handle_subagent_stop.py  test_handle_user_prompt_submit.py  test_hook_install_absolute_paths.py  test_hybrid_search.py  (+44 more)
macf/tests/integration/: test_c84_regression_prevention.py  test_cross_context_integration.py  test_hook_execution.py
macf/tests/smoke/: test_structural_integrity.py
tools/: .coverage  README.md  pyproject.toml  pytest.ini
tools/src/maceff/: cli.py
tools/src/macf/: cli.py  config.py  utils.py
tools/tests/: conftest.py  test_compaction.py  test_config.py  test_get_token_info.py  test_handle_session_start.py  test_handle_stop.py  test_handle_subagent_stop.py  test_handle_user_prompt_submit.py  test_policy_recommend_battery.py  test_project_state.py  test_session.py
tools/tests/fixtures/: sample_config.toml
(+308 files in other folders)
