[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macf"
version = "0.3.1"
description = "macf tools (no external deps)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Craig Versek" }]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "click>=8.0.0",
    "PyYAML>=6.0.0",
    "psutil>=5.9.0",  # For performance testing
]

[project.scripts]
macf_tools = "macf.cli:main"     # fastest startup (direct Python)
