[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macf"
version = "0.4.1-dev"
description = "MACF consciousness infrastructure tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Craig Versek" }]
dependencies = [
    "PyYAML>=6.0.0",  # Required for task system YAML parsing
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "click>=8.0.0",
    "PyYAML>=6.0.0",
    "psutil>=5.9.0",  # For performance testing
]
recommend = [
    "sentence-transformers>=2.2.0",  # For semantic embeddings
    "lancedb>=0.26.0",               # For vector similarity and hybrid search
    # "sqlite-vec>=0.1.0",           # DEPRECATED: ARM64 broken, 12-month stale
]

[project.scripts]
macf_tools = "macf.cli:main"     # fastest startup (direct Python)
