[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macf"
version = "0.1.0"
description = "macf tools (no external deps)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Craig Versek" }]
dependencies = []

[project.scripts]
macf_tools = "macf.cli:main"     # fastest startup (direct Python)
